Prevent chrome://inspect from creating duplicate USB connections

Recently chrome://inspect started to open USB devices multiple times
while probing for ADB devices. On Chrome OS this causes a problem
because the permission_broker will disconnect the previous connection in
favor of the new connection. This caused an endless cycle of connection
failures.

This patch maintains a list of the devices that are currently open and
refused to reopen them during probing until the previous connection is
fully closed.

Bug: 725320
Change-Id: Id9b01d8d14c55ee2576499e2f1c778fea6c7dedc